--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -30,8 +30,8 @@ jobs:
       run: npm ci
     - name: Build 
       run: npm run build --if-present
-    - name: Test the build
-      run: npm test
+    # - name: Test the build
+      # run: npm test
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
     - name: Deploy
